# pyre

./: rust-toolchain.toml
src/kernel/: Cargo.toml
src/kernel/src/: acpi.rs  logging.rs  main.rs  rand.rs
src/kernel/src/arch/x86_64/structures/: mod.rs
src/kernel/src/cpu/: mod.rs  state.rs
src/kernel/src/init/: boot.rs  memory.rs  mod.rs
src/kernel/src/init/arch/: x86_64.rs
src/kernel/src/interrupts/: mod.rs
src/kernel/src/interrupts/controller/: mod.rs
src/kernel/src/interrupts/controller/arch/: mod.rs
src/kernel/src/interrupts/exceptions/: page_fault.rs
src/kernel/src/interrupts/exceptions/arch/: x86_64.rs
src/kernel/src/mem/: mod.rs  pcie.rs
src/kernel/src/mem/alloc/: eternal.rs  mod.rs  pmm.rs
src/kernel/src/mem/alloc/_pmm_experimental/: mod.rs  region.rs
src/kernel/src/mem/io/pci/: mod.rs
src/kernel/src/mem/paging/: mod.rs
src/kernel/src/mem/vmm/: mod.rs
src/kernel/src/panic/: mod.rs  symbols.rs
src/kernel/src/task/: address_space.rs  mod.rs  scheduling.rs
src/kernel/src/time/: mod.rs
src/kernel/src/time/clock/: mod.rs
src/shared/: Cargo.toml
src/shared/error/src/: lib.rs
src/shared/libkernel/src/: lib.rs
src/shared/libsys/: Cargo.toml
src/shared/libsys/src/: lib.rs
src/shared/libsys/src/io/pci/: mod.rs
src/shared/libsys/src/io/pci/device/: class.rs  mod.rs
src/shared/libsys/src/io/pci/device/pci2pci/: mod.rs
src/shared/libsys/src/io/pci/device/standard/: mod.rs
src/shared/pmm/: Cargo.toml
src/shared/pmm/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs  run.rs
(+7 files in other folders)
